<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckBox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name= "valorUno">Ingrese primer valor:</string>
    <string name= "valorDos">Ingrese segundo valor:</string>
    <string name="hint1">Ingrese un numero</string>
    <string name="sum">Sumar</string>
    <string name="res">Restar</string>
    <string name="mul">Multuplicación</string>
    <string name="div">División</string>
    <string name="op">Operar</string>
    <string name="resul">Resultado</string>

</resources>
