<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckboxMainActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop = "true"        
        android:text="@string/valorUno" />
    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv1"      
        android:ems="10"
        android:hint="@string/hint1" >
        <requestFocus/>
        </EditText>
     <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"    
        android:layout_below="@+id/et1"    
        android:text="@string/valorDos" />
     <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"      
        android:ems="10"
        android:hint="@string/hint1" />
     <CheckBox 
        android:id="@+id/cb1"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et2" 
        android:text="@string/sum"/>
     
     <CheckBox 
        android:id="@+id/cb2"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb1" 
        android:text="@string/res"/>
     <CheckBox 
        android:id="@+id/cb3"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb2" 
        android:text="@string/mul"/>
     
     <CheckBox 
        android:id="@+id/cb4"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb3" 
        android:text="@string/div"/>
     
     <Button
        android:id="@+id/b1"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb4" 
        android:text="@string/op"
        android:onClick="operar" 
         />
     <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"   
        android:layout_below="@+id/b1"    
        android:text="@string/resul"  
         />

</RelativeLayout>
